--- a/DealDouble.Web/Views/Category/Index.cshtml
+++ b/DealDouble.Web/Views/Category/Index.cshtml
@@ -1,6 +1,7 @@
 ﻿@model DealDouble.Web.ViewModels.CategoryList
 @{
     ViewBag.Title = Model.PageTitle;
+    Layout = "~/Views/Shared/_DashboardLayout.cshtml";
 }
 <div class="row">
 
