--- a/DealDouble.Web/Views/Home/Index.cshtml
+++ b/DealDouble.Web/Views/Home/Index.cshtml
@@ -5,7 +5,7 @@
 
 <div class="row">
     <div class="col-lg-12">
-
+        <!--Slider Start-->
         <div id="carouselExampleIndicators" class="carousel slide my-4" data-ride="carousel">
             <ol class="carousel-indicators">
                 <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
@@ -14,13 +14,13 @@
             </ol>
             <div class="carousel-inner" role="listbox">
                 <div class="carousel-item active">
-                    <img class="d-block img-fluid" src="http://placehold.it/900x350" alt="First slide">
+                    <img class="d-block img-fluid" src="http://placehold.it/1110x350" alt="First slide">
                 </div>
                 <div class="carousel-item">
-                    <img class="d-block img-fluid" src="http://placehold.it/900x350" alt="Second slide">
+                    <img class="d-block img-fluid" src="http://placehold.it/1110x350" alt="Second slide">
                 </div>
                 <div class="carousel-item">
-                    <img class="d-block img-fluid" src="http://placehold.it/900x350" alt="Third slide">
+                    <img class="d-block img-fluid" src="http://placehold.it/1110x350" alt="Third slide">
                 </div>
             </div>
             <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -32,58 +32,74 @@
                 <span class="sr-only">Next</span>
             </a>
         </div>
-
-        <div class="row">
-            @foreach (var auction in Model.PromotedAuction)
-            {
-                var picURL = auction.AuctionPictures != null && auction.AuctionPictures.Count > 0 ? "/Content/images/"+auction.AuctionPictures.First().Picture.URL : "http://placehold.it/700x400";
-                <div class="col-lg-3 col-md-6 mb-4">
-                    <div class="card h-100">
-                        <a href="@Url.Action("Details","Auction",new { id= auction.AuctionID })"><img class="card-img-top" src="@picURL" alt=""></a>
-                        <div class="card-body">
-                            <h4 class="card-title">
-                                <a href="@Url.Action("Details","Auction", new {id = auction.AuctionID })">@auction.Title</a>
-                            </h4>
-                            <h5>$@auction.ActualAmount</h5>
-                            <p class="card-text">@auction.Description</p>
+        <!--Slider End-->
+       
+            <div class="card-deck">
+                <div class="card-group">
+                    @foreach (var auction in Model.PromotedAuction)
+                    {
+                        var picURL = auction.AuctionPictures != null && auction.AuctionPictures.Count > 0 ? "/Content/images/" + auction.AuctionPictures.First().Picture.URL : "http://placehold.it/700x400";
+                        <div class="col-lg-3 col-md-6 mb-4 p-0">
+                        <div class="card h-100">
+                            <div class="card-header">
+                                <a href="@Url.Action("Details","Auction",new { id= auction.AuctionID })"><img class="card-img-top" src="@picURL" alt=""></a>
+                            </div>
+                            <div class="card-body">
+                                <h4 class="card-title">
+                                    <a href="@Url.Action("Details","Auction", new {id = auction.AuctionID })">@auction.Title</a>
+                                </h4>
+                                <h5>$@auction.ActualAmount</h5>
+                                <p class="card-text">@auction.Description</p>
+                            </div>
+                            <div class="card-footer">
+                                <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
+                            </div>
                         </div>
-                        <div class="card-footer">
-                            <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
-                        </div>
-                    </div>
+                            </div>
+                    }
                 </div>
-            }
+
+            </div>
 
 
 
 
 
-        </div>
 
-        <div class="row">
-            @foreach ( var auction in Model.AllAuction)
-            {
-                var picURL = auction.AuctionPictures != null && auction.AuctionPictures.Count > 0 ? "/Content/images/" + auction.AuctionPictures.First().Picture.URL : "http://placehold.it/700x400";
-                <div class="col-lg-3 col-md-6 mb-4">
-                    <div class="card h-100">
-                        <a href="#"><img class="card-img-top" src="@picURL" alt=""></a>
-                        <div class="card-body">
-                            <h4 class="card-title">
-                                <a href="@Url.Action("Details","Auction", new {id = auction.AuctionID })">@auction.Title</a>
-                            </h4>
-                            <h5>$@auction.ActualAmount</h5>
-                            <p class="card-text">@auction.Description</p>
+       
+
+
+            <div class="card-deck">
+                <div class="card-group">
+                    @foreach (var auction in Model.AllAuction)
+                    {
+                        var picURL = auction.AuctionPictures != null && auction.AuctionPictures.Count > 0 ? "/Content/images/" + auction.AuctionPictures.First().Picture.URL : "http://placehold.it/700x400";
+                        <div class="col-lg-3 col-md-6 mb-4 p-0">
+                            <div class="card h-100">
+                                <div class="card-header">
+
+                                    <a href="#"><img class="card-img-top" src="@picURL" alt=""></a>
+                                </div>
+                                <div class="card-body">
+                                    <h4 class="card-title">
+                                        <a href="@Url.Action("Details","Auction", new {id = auction.AuctionID })">@auction.Title</a>
+                                    </h4>
+                                    <h5>$@auction.ActualAmount</h5>
+                                    <p class="card-text">@auction.Description</p>
+                                </div>
+                                <div class="card-footer">
+                                    <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
+                                </div>
+                            </div>
                         </div>
-                        <div class="card-footer">
-                            <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
-                        </div>
-                    </div>
+                           
+                       
+                    }
+
                 </div>
-            }
+      
 
-        
 
-          
 
         </div>
         <!-- /.row -->
