--- a/DealDouble.Web/Views/Shared/_Layout.cshtml
+++ b/DealDouble.Web/Views/Shared/_Layout.cshtml
@@ -5,10 +5,10 @@
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    @*<meta name="description" content="@Model.PageDescription">
+    @*<meta name="description" content="@Model.PageDescription">*@
     <meta name="author" content="somrat">
 
-    <title>@Model.PageTitle - DealDouble </title>*@
+    @*<title>@Model.PageTitle - DealDouble </title>*@
 
     <!-- Bootstrap core CSS -->
     <link href="~/Content/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -21,46 +21,14 @@
 
 </head>
 <body>
-    <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
-        <div class="container">
-            <a class="navbar-brand" href="#">Start Bootstrap</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarResponsive">
-                <ul class="navbar-nav ml-auto">
-                    <li class="nav-item active">
-                        <a class="nav-link" href="#">
-                            Home
-                            <span class="sr-only">(current)</span>
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">About</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Services</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Contact</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </nav>
+    
+    @{Html.RenderPartial("_TopMenu");}
 
     <div class="container">
         @RenderBody()
  
     </div>
-    <!-- Footer -->
-    <footer class="py-5 bg-dark">
-        <div class="container">
-            <p class="m-0 text-center text-white">Copyright &copy; Your Website 2019</p>
-        </div>
-        <!-- /.container -->
-    </footer>
+   @{Html.RenderPartial("_Footer");}
     <!-- Bootstrap core JavaScript -->
     
     <script src="~/Content/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
