--- a/DealDouble.Web/Views/Shared/_DashboardLayout.cshtml
+++ b/DealDouble.Web/Views/Shared/_DashboardLayout.cshtml
@@ -38,7 +38,7 @@
                 <a href="@Url.Action("Index","Users")" class="list-group-item list-group-item-action bg-light">
                     <i class="fa fa-comments" aria-hidden="true"></i> Comments
                 </a>
-                <a href="@Url.Action("Index","Users")" class="list-group-item list-group-item-action bg-light">
+                <a href="@Url.Action("Users","Dashboard")" class="list-group-item list-group-item-action bg-light">
                     <i class="fa fa-users" aria-hidden="true"></i> Users
                 </a>
                 <a href="@Url.Action("Index","Roles")" class="list-group-item list-group-item-action bg-light">
