--- a/DealDouble.Web/Views/Shared/_Layout.cshtml
+++ b/DealDouble.Web/Views/Shared/_Layout.cshtml
@@ -18,6 +18,7 @@
     <link href="~/Content/css/shop-homepage.css" rel="stylesheet">
     <script src="~/Content/vendor/jquery/jquery.min.js"></script>
     <script src="~/Content/vendor/jquery/jquery.validate.min.js"></script>
+    <link href="~/Content/css/registration-from.css" rel="stylesheet" />
 
 </head>
 <body>
