--- a/DealDouble.Web/Views/Auction/Index.cshtml
+++ b/DealDouble.Web/Views/Auction/Index.cshtml
@@ -45,7 +45,7 @@
               
                 </div>
                 <div class="col-md-2 mt-4">
-                    <button class="btn btn-md btn-danger" type="button" id="searchBtn">Search</button>
+                    <button class="btn btn-md btn-danger" type="button" id="searchBtn"><i class="fas fa-search"></i></button>
                     <button class="btn btn-md btn-success" type="button" id="resetBtn">Reset</button>
                 </div>
                 <div class="col-md-3 float-right mt-4">
